# notch

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  test-tracker.js
data/: goals.example.md
public/: index.html
server/: calendar.js  context.js  history.js  index.js  llm.js  planner.js  routines.js  scheduler.js  storage.js  summarizer.js  tracker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tracker.rs
