[package]
name = "littlejot-tracker"
version = "0.1.0"
description = "LittleJot Activity Tracker - macOS menu bar app for activity tracking"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
image = "0.25"
base64 = "0.22"
dirs = "5"

[target.'cfg(macos)'.dependencies]
cocoa = "0.26"
core-foundation = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
